--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -29,9 +29,13 @@
 }
 
 .avatar {
+    width: 200px;
+    height: 200px;
+}
+
+.avatar img {
     width: 100%;
     height: 100%;
-    background: #fca311;
 }
 
 .score {
