--- a/src/main/resources/static/css/project.css
+++ b/src/main/resources/static/css/project.css
@@ -13,3 +13,21 @@
     padding: 15px;
     margin: 10px 0 auto;
 }
+
+.host-avatar {
+    width: 70px;
+    height: 70px;
+    border-radius: 100%;
+    background-color: #0a1f36;
+    display: inline-block;
+}
+
+.host-avatar img {
+    width: 100%;
+    border-radius: 100%;
+}
+
+.sm {
+    width: 45px !important;
+    height: 45px !important;
+}
