--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,9 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Page Not Found</title>
 </head>
 <body>
-<h1 th:text="${session[SPRING_SECURITY_LAST_EXCEPTION]}">Error page</h1>
+<h2 th:text="error.error"></h2>
+<h1>There's no page here!</h1>
+<p>
+    We're sorry, the page you are looking for does not exist!
+    Go back to <a href="/">home page</a>.
+</p>
 </body>
 </html>
