--- a/src/main/resources/templates/project/index.html
+++ b/src/main/resources/templates/project/index.html
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head th:replace="fragments/header :: header(~{::link})">
-    <link rel="stylesheet" th:href="@{../css/card.css}">
-    <link rel="stylesheet" th:href="@{../css/project.css}">
-
+    <link rel="stylesheet" th:href="@{../css/explore.css}">
 </head>
 <body>
 <div th:replace="fragments/navbar :: navbar"></div>
 
-<div class="container cards-index">
-    <div class="row" th:each="project : ${projects}">
-        <div class="col-2"></div>
-        <div class="col-8">
-            <div class="card">
-                <div class="card-box card-body">
-                    <p class="card-title" th:text="${project.title}"></p>
-                    <small class="text-muted" th:text="'#' + ${project.projectId}"></small>
-                    <br>
-                    <p class="devStatus" th:text="${project.devStatus}"></p>
-                    <p th:text="${project.intro}">Card subtitle</p>
-
+<div class="container-fluid wrapper">
+    <div class="container cards-index">
+        <form action="/projects/search" method="GET">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+            <div class="row">
+                <div class="col-12">
+                    <input type="text" name="keyword" placeholder="Search.." required>
                 </div>
-                <div class="table">
-                    <ul id="horizontal-list">
-                        <li>
-                            <button class="base-btn btn-sm"><a
-                                    th:href="@{'/projects/' + ${project.projectId} + '/details'}">Read more</a></button>
-                        </li>
-                        <li>
-                            <div class="host-avatar sm">
-                                <a th:href="'/users/' + ${project.host.userId} + '/profile'">
-                                    <img th:src="${project.host.avatar}" alt="Avatar">
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
+            </div>
+        </form>
+        <hr>
+        <div class="row" th:each="project : ${projects}">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <div class="explore-card">
+                    <div class="card-box card-body">
+                        <a th:href="@{'/projects/' + ${project.projectId} + '/details'}">
+                            <p class="card-title" th:text="${project.title}"></p>
+                            <span th:text="'#' + ${project.projectId}"></span>
+                            <br>
+                            <p class="devStatus" th:text="${project.devStatus}"></p>
+                            <p th:text="${project.intro}">Card subtitle</p>
+                        </a>
+                        <div class="delimiter delimiter-full"></div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-2"></div>
     </div>
 </div>
-
 <div th:replace="fragments/footer :: footer"></div>
 
 </body>
