--- a/src/main/resources/templates/project/search.html
+++ b/src/main/resources/templates/project/search.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head th:replace="fragments/header :: header(~{::link})">
-    <link rel="stylesheet" th:href="@{../css/card.css}">
+    <link rel="stylesheet" th:href="@{../css/explore.css}">
 </head>
 <body>
 <div th:replace="fragments/navbar :: navbar"></div>
 
-<div class="container cards-index">
+<div class="container-fluid wrapper">
     <h2>Search filter</h2>
-    <div class="row" th:each="project : ${projects}">
-        <div class="col-12">
-            <div class="card card-base">
-                <div class="card-box card-body">
-                    <h4 class="card-title" th:text="${project.title}">Title</h4>
-                    <p class="card-text" th:text="${project.intro}"></p>
-                    <a th:href="@{'/projects/' + ${project.projectId} + '/details'}" class="card-link">Read more</a>
+    <div class="container cards-index">
+        <div class="row" th:each="project : ${projects}">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <div class="explore-card">
+                    <div class="card-box card-body">
+                        <a th:href="@{'/projects/' + ${project.projectId} + '/details'}">
+                            <p class="card-title" th:text="${project.title}"></p>
+                            <span th:text="'#' + ${project.projectId}"></span>
+                            <br>
+                            <p class="devStatus" th:text="${project.devStatus}"></p>
+                            <p th:text="${project.intro}">Card subtitle</p>
+                        </a>
+                        <div class="delimiter delimiter-full"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 <div th:replace="fragments/footer :: footer"></div>
 
 </body>
